# WLLHM

Code/: CMakeLists.txt  CMakeSettings.json  OBJ_Loader.h  Shader.hpp  Texture.hpp  Triangle.cpp  Triangle.hpp  mesh.cpp  mesh.hpp  rasterizer.cpp  rasterizer.hpp  task1.cpp  task2.cpp  task2.sh
